--- a/Chinese.htm
+++ b/Chinese.htm
@@ -8,8 +8,8 @@
     <title>Chia-Wei Chuang 的履歷</title>
     <link rel="stylesheet" href="Public/Css/style.css">
     <style>
-        body{
-            font-family:'DFKai-sb','Times New Roman', Times, serif;
+        body {
+            font-family: 'DFKai-sb', 'Times New Roman', Times, serif;
         }
     </style>
 </head>
@@ -17,7 +17,9 @@
 <body>
     <div class="grid-container">
         <div class="personalInfo">
-            <a href="index.htm"><h2>英文履歷連結</h2></a>
+            <a href="index.htm">
+                <h2>英文履歷連結</h2>
+            </a>
             <h1>個人資訊</h1>
             <ul>
                 <li>名字：<strong>Chia-Wei Chuang</strong></li>
@@ -36,26 +38,18 @@
                     <ul>
                         <li><strong>任務：</strong></li>
                         <ul>
-                            <li>ETC 專案：</li>
-                            <ul>
-                                <li>開發網頁介面並與 Flir 相機連接。</li>
-                                <li>製作應用程式工具可以輕鬆檢查和分類照片。</li>
-                                <li>透過程式改善照片的品質。</li>
-                                <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
-                                <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
-                            </ul>
-                            <li>台中智慧球場專案：</li>
-                            <ul>
-                                <li>安裝軟體與測試系統。</li>
-                                <li>處理硬體與軟體的 bug。</li>
-                            </ul>
+                            <li>開發網頁介面並與 Flir 相機連接。</li>
+                            <li>製作應用程式工具可以輕鬆檢查和分類照片。</li>
+                            <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
+                            <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
+                            <li>開發與 Line Bot 溝通的 api</li>
                         </ul>
                         <li><strong>貢獻：</strong></li>
                         <ul>
                             <li>使得 Flir 相機的參數設定及其他設定配置更方便。</li>
                             <li>在分類照片節省許多時間。</li>
-                            <li>解決系統上的 Bug。</li>
                             <li>車牌辨識準確率高達97%。</li>
+                            <li>透過 Line Bot 查詢資訊及常見問題的答案</li>
                         </ul>
                         <li><strong>影片：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
@@ -63,7 +57,7 @@
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">照片分類工具</a>
                     </ul>
-                    <p>關鍵字：PHP、jQuery、Javascript、Python、C++、C#</p>
+                    <p>關鍵字：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
                 <li>
                     <h3>CIMFORCE 2016/7 ~ 2018/12</h3>
@@ -102,7 +96,8 @@
                 <h2>C#</h2>
                 <ul>
                     <li><a target="_blank" href="https://ccw0621.visualstudio.com/_git/SortOutData">Library</a></li>
-                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/DotNetCore/_git/Training">.net core</a></li>
+                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/DotNetCore/_git/Training">.net
+                            core</a></li>
                 </ul>
             </div>
             <div>
@@ -191,13 +186,6 @@
                     <li>Team Foundation Server(TFS)</li>
                     <li>putty</li>
                     <li>Markdown</li>
-                </ul>
-            </div>
-            <div class="os">
-                <h4>作業系統(basic)</h4>
-                <ul>
-                    <li>windows</li>
-                    <li>ubuntu</li>
                     <li>Docker</li>
                 </ul>
             </div>
