--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,9 @@
 <body>
     <div class="grid-container">
         <div class="personalInfo">
-            <a href="Chinese.htm"><h2>Chinese CV</h2></a>
+            <a href="Chinese.htm">
+                <h2>Chinese CV</h2>
+            </a>
             <h1>Personal Information</h1>
             <img id="QRCode" src="Public/Imgs/QRCode.jpg" alt="another CV">
             <ul>
@@ -32,26 +34,20 @@
                     <ul>
                         <li><strong>Task：</strong></li>
                         <ul>
-                            <li>ETC project：</li>
-                            <ul>
-                                <li>Develop the Web UI for connecting with the camera, Flir.</li>
-                                <li>Make tools to easily check and categorize the pictures.</li>
-                                <li>Improve the quality of the pictures from the camera.</li>
-                                <li>Use API to create the license plate detection and the license plate recognition PascalVOC training files.</li>
-                                <li>Use YOLOv4 to train the license plate detection model and the license plate recognition model.</li>
-                            </ul>
-                            <li>Taichung Smart baseball project：</li>
-                            <ul>
-                                <li>Install and test the system.</li>
-                                <li>Check and handle hardware and software issues.</li>
-                            </ul>
+                            <li>Develop the web UI for connecting with the camera, Flir.</li>
+                            <li>Make tools to easily check and categorize the pictures.</li>
+                            <li>Use API to create the license plate detection and the license plate recognition
+                                PascalVOC training files.</li>
+                            <li>Use YOLOv4 to train the license plate detection model and the license plate recognition
+                                model.</li>
+                            <li>Develop the web api for Line Bot</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
                             <li>Save tons of times to categorize the pictures.</li>
-                            <li>Deal with some system's bugs.</li>
                             <li>The license plate recognition is up to 97%.</li>
+                            <li>Can search information and find some answer of default question via Line Bot</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
@@ -60,7 +56,7 @@
                             href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">Pictures
                             Category</a>
                     </ul>
-                    <p>Keyword：PHP、jQuery、Javascript、Python、C++、C#</p>
+                    <p>Keyword：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
                 <li>
                     <h3>CIMFORCE Jul. 2016 ~ Dec. 2018</h3>
@@ -104,7 +100,8 @@
                 <h2>C#</h2>
                 <ul>
                     <li><a target="_blank" href="https://ccw0621.visualstudio.com/_git/SortOutData">Library</a></li>
-                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/DotNetCore/_git/Training">.net core</a></li>
+                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/DotNetCore/_git/Training">.net
+                            core</a></li>
                 </ul>
             </div>
             <div>
@@ -193,13 +190,6 @@
                     <li>Team Foundation Server(TFS)</li>
                     <li>putty</li>
                     <li>Markdown</li>
-                </ul>
-            </div>
-            <div class="os">
-                <h4>OS(basic)</h4>
-                <ul>
-                    <li>windows</li>
-                    <li>ubuntu</li>
                     <li>Docker</li>
                 </ul>
             </div>
