--- a/index.htm
+++ b/index.htm
@@ -40,14 +40,14 @@
                                 PascalVOC training files.</li>
                             <li>Use YOLOv4 to train the license plate detection model and the license plate recognition
                                 model.</li>
-                            <li>Develop the web api for Line Bot</li>
+                            <li>Develop the web api for Line Bot.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
                             <li>Save tons of times to categorize the pictures.</li>
                             <li>The license plate recognition is up to 97%.</li>
-                            <li>Can search information and find some answer of default question via Line Bot</li>
+                            <li>Can search information and find some answer of default question via Line Bot.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
