--- a/Chinese.htm
+++ b/Chinese.htm
@@ -42,14 +42,14 @@
                             <li>製作應用程式工具可以輕鬆檢查和分類照片。</li>
                             <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
                             <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
-                            <li>開發與 Line Bot 溝通的 api</li>
+                            <li>開發與 Line Bot 溝通的 api。</li>
                         </ul>
                         <li><strong>貢獻：</strong></li>
                         <ul>
                             <li>使得 Flir 相機的參數設定及其他設定配置更方便。</li>
                             <li>在分類照片節省許多時間。</li>
                             <li>車牌辨識準確率高達97%。</li>
-                            <li>透過 Line Bot 查詢資訊及常見問題的答案</li>
+                            <li>透過 Line Bot 查詢資訊及常見問題的答案。</li>
                         </ul>
                         <li><strong>影片：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
