--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
                             <li>Save tons of times to categorize the pictures.</li>
                             <li>The license plate recognition is up to 97%.</li>
-                            <li>Can search information and find some answer of default question via Line Bot.</li>
+                            <li>Can search information and find some answers to default questions via Line Bot.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
