--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
                                 PascalVOC training files.</li>
                             <li>Use YOLOv4 to train the license plate detection model and the license plate recognition
                                 model.</li>
-                            <li>Develop the web api for Line Bot.</li>
+                            <li>Develop the web API for Line Bot.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
