修改英文履歷

--- a/index.htm
+++ b/index.htm
@@ -34,20 +34,20 @@
                     <ul>
                         <li><strong>Task：</strong></li>
                         <ul>
-                            <li>Develop the web UI for connecting with the camera, Flir.</li>
-                            <li>Make tools to easily check and categorize the pictures.</li>
-                            <li>Use API to create the license plate detection and the license plate recognition
+                            <li>Developed the web UI for connecting with the camera, Flir.</li>
+                            <li>Made tools to easily check and categorized the pictures.</li>
+                            <li>Used API to create the license plate detection and the license plate recognition
                                 PascalVOC training files.</li>
-                            <li>Use YOLOv4 to train the license plate detection model and the license plate recognition
+                            <li>Used YOLOv4 to train the license plate detection model and the license plate recognition
                                 model.</li>
-                            <li>Develop the web API for Line Bot.</li>
+                            <li>Developed the web API for Line Bot.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
-                            <li>Make the camera, Flir, and other parameter settings convenient.</li>
-                            <li>Save tons of times to categorize the pictures.</li>
+                            <li>Made the camera, Flir, and other parameter settings convenient.</li>
+                            <li>Saved tons of times to categorize the pictures.</li>
                             <li>The license plate recognition is up to 97%.</li>
-                            <li>Can search information and find some answers to default questions via Line Bot.</li>
+                            <li>Could search information and find some answers to default questions via Line Bot.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
@@ -66,19 +66,19 @@
                     <ul>
                         <li><strong>Task：</strong></li>
                         <ul>
-                            <li>Handle any machining simulation issues like：deal with bugs, develop new
-                                requirements, communicate with software developer, Formtec, etc.</li>
-                            <li>Customize and deal with the tools based on NX.</li>
-                            <li>Research and resolve the problems of TFS.</li>
+                            <li>Handled any machining simulation issues like：dealt with bugs, developed new
+                                requirements, communicated with software developer, Formtec, etc.</li>
+                            <li>Customized and dealt with the tools based on NX.</li>
+                            <li>Researched and resolved the problems of TFS.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
-                            <li>Make the machining simulation much closer to the on-site situation.</li>
-                            <li>Replan the data format and process to make it easy to recreate in the test computer.
+                            <li>Made the machining simulation much closer to the on-site situation.</li>
+                            <li>Replaned the data format and processed them to make it easy to recreate in the test computer.
                             </li>
-                            <li>Find a few issues(about 30) and create a few new requirements to let the machining
+                            <li>Found a few issues(more than 30) and created a few new requirements to let the machining
                                 simulation software much more stable.</li>
-                            <li>Import the new packages to make it a little easier to manage in the TFS.</li>
+                            <li>Imported the new packages to make them easier to manage in the TFS.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
