--- a/Chinese.htm
+++ b/Chinese.htm
@@ -55,7 +55,9 @@
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">相機網頁介面</a>、
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">照片分類工具</a>
+                            href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">照片分類工具</a>>、
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/file/d/1QLdrXr6WAzldaYyZDNkMSWmHTAwW7fVz/view?usp=sharing">LineBot</a>
                     </ul>
                     <p>關鍵字：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
