--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,9 @@
                             href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>、
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">Pictures
-                            Category</a>
+                            Category</a>、
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/file/d/1QLdrXr6WAzldaYyZDNkMSWmHTAwW7fVz/view?usp=sharing">LineBot</a>
                     </ul>
                     <p>Keyword：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
@@ -74,7 +76,8 @@
                         <li><strong>Contribution：</strong></li>
                         <ul>
                             <li>Made the machining simulation much closer to the on-site situation.</li>
-                            <li>Replaned the data format and processed them to make it easy to recreate in the test computer.
+                            <li>Replaned the data format and processed them to make it easy to recreate in the test
+                                computer.
                             </li>
                             <li>Found a few issues(more than 30) and created a few new requirements to let the machining
                                 simulation software much more stable.</li>
