--- a/Chinese.htm
+++ b/Chinese.htm
@@ -189,6 +189,7 @@
                     <li>putty</li>
                     <li>Markdown</li>
                     <li>Docker</li>
+                    <li>Selenium</li>
                 </ul>
             </div>
             <div class="others">
