新增任務(爬蟲)

--- a/Chinese.htm
+++ b/Chinese.htm
@@ -43,6 +43,7 @@
                             <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
                             <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
                             <li>開發與 Line Bot 溝通的 api。</li>
+                            <li>使用 YOLOv4 破解驗證碼以進行網路爬蟲</li>
                         </ul>
                         <li><strong>貢獻：</strong></li>
                         <ul>
