--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,7 @@
                             <li>Used YOLOv4 to train the license plate detection model and the license plate recognition
                                 model.</li>
                             <li>Developed the web API for Line Bot.</li>
+                            <li>Used YOLOv4 to crack the CAPTCHA, then proceeded web crawler</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
