--- a/Chinese.htm
+++ b/Chinese.htm
@@ -40,7 +40,6 @@
                         <ul>
                             <li>開發網頁介面並與 Flir 相機連接。</li>
                             <li>製作應用程式工具可以輕鬆檢查和分類照片。</li>
-                            <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
                             <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
                             <li>開發與 Line Bot 溝通的 api。</li>
                             <li>使用 YOLOv4 破解驗證碼以進行網路爬蟲</li>
@@ -60,7 +59,7 @@
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://drive.google.com/file/d/1QLdrXr6WAzldaYyZDNkMSWmHTAwW7fVz/view?usp=sharing">LineBot</a>
                     </ul>
-                    <p>關鍵字：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
+                    <p>關鍵字：PHP、jQuery、Python、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
                 <li>
                     <h3>CIMFORCE 2016/7 ~ 2018/12</h3>
