--- a/index.htm
+++ b/index.htm
@@ -36,8 +36,6 @@
                         <ul>
                             <li>Developed the web UI for connecting with the camera, Flir.</li>
                             <li>Made tools to easily check and categorized the pictures.</li>
-                            <li>Used API to create the license plate detection and the license plate recognition
-                                PascalVOC training files.</li>
                             <li>Used YOLOv4 to train the license plate detection model and the license plate recognition
                                 model.</li>
                             <li>Developed the web API for Line Bot.</li>
@@ -59,7 +57,7 @@
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://drive.google.com/file/d/1QLdrXr6WAzldaYyZDNkMSWmHTAwW7fVz/view?usp=sharing">LineBot</a>
                     </ul>
-                    <p>Keyword：PHP、jQuery、Python、C++、C#、YOLOv4、Laravel、ASP.NET CORE</p>
+                    <p>Keyword：PHP、jQuery、Python、C#、YOLOv4、Laravel、ASP.NET CORE</p>
                 </ul>
                 <li>
                     <h3>CIMFORCE Jul. 2016 ~ Dec. 2018</h3>
