--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
             <img id="QRCode" src="Public/Imgs/QRCode.jpg" alt="another CV">
             <ul>
                 <li>Name：<strong>Chia-Wei Chuang</strong></li>
-                <li>Phone：<strong>0937-797-752</strong></li>
+                <li>Phone：<strong>(+886)0937-797752</strong></li>
                 <li>Email：<strong>amos6572@gmail.com</strong></li>
             </ul>
         </div>
