--- a/index.htm
+++ b/index.htm
@@ -45,8 +45,8 @@
                         <ul>
                             <li>Made the camera, Flir, and other parameter settings convenient.</li>
                             <li>Saved tons of times to categorize the pictures.</li>
-                            <li>The license plate recognition is up to 97%.</li>
-                            <li>Could search information and find some answers to default questions via Line Bot.</li>
+                            <li>License plate recognition rate was up to 97%.</li>
+                            <li>Searched information and found the answers via Line Bot.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
